--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 19:05:04 2018</p>
+         Last Run: Sat Jul 21 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>4</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>72</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>3</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>63</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>4</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>55</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "48",
                  "49",
-                 "50",
-                 "58"
+                 "57"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "63",
-                 "55"
+                 "69",
+                 "60",
+                 "53"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 19:05:04 2018</p>
+         Last Run: Sat Jul 21 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -236,9 +236,9 @@
                         <td>0</td>
                         <td>39</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -281,7 +281,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>63</td>
                         <td>0</td>
                         <td>10</td>
@@ -406,7 +406,7 @@
                  "0",
                  "5",
                  "24",
-                 "38"
+                 "36"
                ]
              },
              {
@@ -426,7 +426,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
+                 "33",
                  "28",
                  "21",
                  "17",
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 19:05:04 2018</p>
+         Last Run: Sat Jul 21 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -474,9 +474,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>1</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -487,7 +487,7 @@
                         <td>30</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -511,14 +511,14 @@
                         <td>24</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>5</td>
+                        <td>ESE</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>23</td>
                         <td>6</td>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "28",
-                 "29"
+                 "28"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "28",
-                 "29"
+                 "28"
                ]
              }
            ]
@@ -664,10 +664,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "2",
-                 "5",
+                 "4",
                  "7"
                ]
              }
