--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 20:05:17 2018</p>
+         Last Run: Sat Jul 21 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,18 +31,18 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>4</td>
                         <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>69</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
                         <td>3</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>53</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "19",
                  "18",
                  "16"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "19",
                  "18",
                  "16"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "60",
-                 "53"
+                 "67",
+                 "58",
+                 "51"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 20:05:17 2018</p>
+         Last Run: Sat Jul 21 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -236,7 +236,7 @@
                         <td>0</td>
                         <td>39</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
                         <td>33</td>
                      </tr>
@@ -248,7 +248,7 @@
                         <td>0</td>
                         <td>42</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>28</td>
                      </tr>
@@ -258,7 +258,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>5</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -270,7 +270,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>24</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -416,8 +416,8 @@
                "data":[
                  "39",
                  "42",
-                 "47",
-                 "55",
+                 "46",
+                 "54",
                  "63"
                ]
              },
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 20:05:17 2018</p>
+         Last Run: Sat Jul 21 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -484,7 +484,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>5</td>
                         <td>10</td>
                         <td>SW</td>
@@ -496,10 +496,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -512,19 +512,19 @@
                         <td>7</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>23</td>
                         <td>6</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "28",
-                 "28"
+                 "29"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "28",
-                 "28"
+                 "29"
                ]
              }
            ]
@@ -653,8 +653,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "30",
-                 "27",
+                 "29",
+                 "26",
                  "24",
                  "23"
                ]
@@ -667,8 +667,8 @@
                  "0",
                  "1",
                  "2",
-                 "4",
-                 "7"
+                 "3",
+                 "6"
                ]
              }
            ]
