--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 22:05:04 2018</p>
+         Last Run: Sat Jul 21 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>4</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NE</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "19",
                  "18",
                  "16"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "19",
                  "18",
                  "16"
                ]
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
-                 "58",
+                 "68",
+                 "59",
                  "52"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 22:05:04 2018</p>
+         Last Run: Sat Jul 21 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -282,7 +282,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>36</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
@@ -418,7 +418,7 @@
                  "42",
                  "46",
                  "54",
-                 "62"
+                 "63"
                ]
              },
              {
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 22:05:04 2018</p>
+         Last Run: Sat Jul 21 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,11 +472,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>1</td>
+                        <td>W</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -484,10 +484,10 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>5</td>
-                        <td>8</td>
-                        <td>W</td>
+                        <td>10</td>
+                        <td>WSW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -496,10 +496,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -508,23 +508,23 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>5</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "28",
-                 "28"
+                 "29"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "28",
-                 "28"
+                 "29"
                ]
              }
            ]
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "31",
-                 "27",
-                 "25",
-                 "24"
+                 "35",
+                 "30",
+                 "26",
+                 "24",
+                 "23"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "2",
-                 "5",
-                 "8"
+                 "3",
+                 "6"
                ]
              }
            ]
