--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 23:05:04 2018</p>
+         Last Run: Sun Jul 22 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>4</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NE</td>
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "47",
                  "49",
                  "57"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 23:05:04 2018</p>
+         Last Run: Sun Jul 22 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>0</td>
                         <td>42</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>28</td>
                      </tr>
@@ -266,15 +266,15 @@
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
+                        <td>30</td>
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>17</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -405,7 +405,7 @@
                  "0",
                  "0",
                  "5",
-                 "24",
+                 "30",
                  "36"
                ]
              },
@@ -429,7 +429,7 @@
                  "33",
                  "28",
                  "21",
-                 "17",
+                 "35",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 23:05:04 2018</p>
+         Last Run: Sun Jul 22 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,7 +472,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>8</td>
                         <td>W</td>
@@ -487,7 +487,7 @@
                         <td>30</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>S</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -496,7 +496,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -512,7 +512,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -523,8 +523,8 @@
                         <td>23</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>6</td>
+                        <td>SE</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -652,9 +652,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "36",
                  "30",
-                 "26",
+                 "27",
                  "24",
                  "23"
                ]
@@ -667,8 +667,8 @@
                  "0",
                  "1",
                  "2",
-                 "3",
-                 "6"
+                 "4",
+                 "7"
                ]
              }
            ]
